   @startuml
'https://plantuml.com/ie-diagram

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity User {
  *user_email : text
  --
  *name : text
  *address : text
  *birthdate : date
  gender : boolean
}

entity Event {
  *date : datetime
  *union_id : text <<FK>>
  *event_type_id : text <<FK>>
}

entity EventType {
  *event_type_id : text
}
Event }o..|| EventType

entity Contender {
  * user_email : text <<FK>>
  * union_id : text <<FK>>
  * event_type_id : text <<FK>>
  * date : datetime <<FK>>
  --
  *contender_id : number <<generated>>
  time : number
}
Contender }o...|| Event
Contender }o..|| User


entity AgeGroup {
    *lower_age : number
    *upper_age : number
}

entity EventType_AgeGroup {
    * lower_age : number <<FK>>
    * upper_age : number <<FK>>
    * event_type_id : text <<FK>>
}
EventType ||..|{ EventType_AgeGroup
EventType_AgeGroup }o..|| AgeGroup

entity SportsUnion {
    *union_id : text
    --
    *name : text
    address : text
    email : text
    phone_number : text
}
SportsUnion ||..o{ Event



'User ||..o{ Event
'User |o..o{ Contender


@enduml